# python_tutorial

./: README.md  curl_commands.sh  curl_process_with_reponse.py
FastWithReact/: main.py
FastWithReact/app/: db.py  main.py
FastWithReact/app/api/: api.py
FastWithReact/app/api/crud/: blog.py  upload_crud.py
FastWithReact/app/api/endpoints/: blogs.py  upload_api.py
FastWithReact/app/api/models/: blog.py
chatbot_with_rasa/: actions.py  config.yml  domain.yml
chatbot_with_rasa/data/: nlu.yml  stories.yml
crudexample/crudexample/: settings.py  urls.py
crudexample/roles/: models.py
crudexample/roles/migrations/: 0001_initial.py
crudexample/users/: authentication.py  forms.py  models.py  urls.py  views.py
crudexample/users/migrations/: 0001_initial.py  0002_alter_task_table.py  0003_users_delete_task.py  0004_users_last_login.py
crudexample/users/templates/: login.html  user_delete.html  user_form.html  users_list.html
databricks-poetry-poc/: README.md  pyproject.toml
databricks-poetry-poc/mappings/: mysql_table_schema.json  table_mapping.json
databricks-poetry-poc/src/databricks_poetry_poc/: create_mysql_table.py  create_table.py
first_poetry_demo/: pyproject.toml
first_poetry_demo/src/first_poetry_demo/: main.py
