[project]
name = "first-poetry-demo"
version = "0.1.0"
description = ""
authors = [
    {name = "virendra-kashyap",email = "virendrakashyap244@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "requests (>=2.32.3,<3.0.0)"
]

[tool.poetry]
packages = [{include = "first_poetry_demo", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
